# torch-solider

./: .gitignore  README.md  pyproject.toml
SOLIDER-REID-DDP/: evaluate_pretrained.py  requirements.txt  test.sh  train.py
SOLIDER-REID-DDP/configs/: config.yaml  eval_cctv_reid.yaml  eval_market1501.yaml  eval_msmt17.yaml  eval_trained_model.yaml
SOLIDER-REID-DDP/scripts/: run_eval_pretrained.sh
SOLIDER-REID-DDP/src/: __init__.py
SOLIDER-REID-Lightning/: requirements.txt
SOLIDER-REID-Lightning/configs/: base_config.yaml
SOLIDER-REID-Lightning/scripts/: check_cctv_dataset.py  test_cctv_dataset.py  train.py  train_cctv_local.sh
SOLIDER-REID-Lightning/src/: __init__.py
dataset/: README.md  build_dataset.py  build_reid_dataset.py  build_reid_dataset.sh  copy.sh  copy_images.py  dataset.sh  merge_datasets.sh
lightning-solider/: args.py  convert_ckpt_to_pth.py  convert_ckpt_to_pth.sh  criterion.py  data_augmentation.py  dino_data_modeule.py  dino_lightining_module.py  run_dino_lightning.sh  run_solider.sh  run_solider_resume.sh  train.py  train.sh  train_dino.py  train_dino.sh  train_solider.py  train_solider.sh  utils.py
lightning-solider-reid/: README.md  run.sh  train.py  train.sh  train_reid.py
lightning-solider-reid/config/: __init__.py  reid_args.py
lightning_manual/: example_finetuning.py  example_lightning.py  lightning_basic_training_guide.md  lightning_finetuning_manual.md
solider_reid_lightning/: README.md  config.py  module.py  train.py
torch-solider/: main_dino.py  main_solider.py  swin_transformer.py  vision_transformer.py
(+89 files in other folders)
